examples/test/testpolicy7188.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy7188
  namespace: namespace330
spec:
  podSelector:
    matchLabels:
      key22: value45
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key8: value16
          key17: value42
      podSelector:
        matchLabels:
          key15: value17
          key13: value32
          key33: value14
